fix responsive layout for nav logo not working on mobile issue, ongoing 111-12-13-05

--- a/style/core.css
+++ b/style/core.css
@@ -72,14 +72,17 @@ html{
 
 
 .logo{
-     margin-bottom: 3rem;   
+    margin-bottom: 3rem;   
 }
 .logo img{
     width:2rem;
     height: 100%;
+    margin-bottom: 1rem;
 }
 .logo a{
-    margin-bottom: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .logo p{
     font-weight: bold;
@@ -252,6 +255,7 @@ html{
         width:1.5rem;
         height: 100%;
         margin-right: 0.5rem;
+        margin-bottom: 0;
     }
     .section-main{
         padding:0 2.5rem;
@@ -302,6 +306,9 @@ html{
     }
     .section-body header{
         padding-bottom: 0;
+    }
+    .logo{
+        margin-right: 0;
     }
     header nav{
         flex-direction: column;
